# gridict

./: .gitignore  README.md  setup.cfg
src/gridict/: line.py
tests/gridict/: test_line.py
